Wrap at 80 columns.

--- a/tmux.1
+++ b/tmux.1
@@ -627,7 +627,8 @@ command or cycled with
 .Ic next-layout
 (bound to
 .Ql C-space
-by default); once a layout is chosen, panes within it may be moved and resized as normal.
+by default); once a layout is chosen, panes within it may be moved and resized
+as normal.
 .Pp
 The following layouts are supported:
 .Bl -tag -width Ds
@@ -636,8 +637,8 @@ Panes are spread out evenly from left to right across the window.
 .It Ic even-vertical
 Panes are spread evenly from top to bottom.
 .It Ic main-horizontal
-A large (main) pane is shown at the top of the window and the remaining panes are
-spread from left to right in the leftover space at the bottom.
+A large (main) pane is shown at the top of the window and the remaining panes
+are spread from left to right in the leftover space at the bottom.
 Use the
 .Em main-pane-height
 window option to specify the height of the top pane.
@@ -1518,7 +1519,8 @@ these may be
 .Ql fg=colour
 to set the foreground colour,
 .Ql bg=colour
-to set the background colour, the name of one of the attributes (listed under the
+to set the background colour, the name of one of the attributes (listed under
+the
 .Ic message-attr
 option) to turn an attribute on, or an attribute prefixed with
 .Ql no
@@ -1964,8 +1966,8 @@ window options.
 The window name is printed in inverted colours if an alert (bell, activity or
 content) is present.
 .Pp
-The colour and attributes of the status line may be configured, the entire status line using
-the
+The colour and attributes of the status line may be configured, the entire
+status line using the
 .Ic status-attr ,
 .Ic status-fg
 and
@@ -1977,8 +1979,8 @@ and
 .Ic window-status-bg
 window options.
 .Pp
-The status line is automatically refreshed at interval if it has changed, the interval may be
-controlled with the
+The status line is automatically refreshed at interval if it has changed, the
+interval may be controlled with the
 .Ic status-interval
 session option.
 .Pp
