--- a/tmux.1
+++ b/tmux.1
@@ -323,6 +323,16 @@ If neither a colon nor period appears,
 first attempts to use the argument as a pane index; if that fails, it is looked
 up as for
 .Ar target-window .
+One of the strings
+.Em top ,
+.Em bottom ,
+.Em left ,
+.Em right ,
+.Em top-left ,
+.Em top-right ,
+.Em bottom-left or
+.Em bottom-right
+may be used instead of a pane index.
 .Pp
 Multiple commands may be specified together as part of a
 .Em command sequence .
