--- a/TODO
+++ b/TODO
@@ -97,4 +97,5 @@
 - session history for client and last-session command
 - option to change status line colour when current window is in a mode?
 - permit read-only clients
+- option to move copy mode indicator into status line
 
