Options to set the colour of the pane borders, with different colours for the active pane.

--- a/tmux.1
+++ b/tmux.1
@@ -1457,6 +1457,12 @@ If on,
 captures the mouse and when a window is split into multiple panes the mouse may
 be used to select the current pane.
 The mouse click is also passed through to the application as normal.
+.It Ic pane-border-fg Ar colour
+.It Ic pane-border-bg Ar colour
+Set the pane border colour for panes aside from the active pane.
+.It Ic pane-active-border-fg Ar colour
+.It Ic pane-active-border-bg Ar colour
+Set the pane border colour for the currently active pane.
 .It Ic prefix Ar keys
 Set the keys accepted as a prefix key.
 .Ar keys
