--- a/TODO
+++ b/TODO
@@ -99,4 +99,6 @@
 - option to change status line colour when current window is in a mode?
 - permit read-only clients
 - option to move copy mode indicator into status line
+- list-buffer/show-buffer should display UTF-8
+- selection behaviour closer to vi in vi mode
 
