Document swap-pane -d.

--- a/tmux.1
+++ b/tmux.1
@@ -1038,6 +1038,10 @@ is used and no source pane is specified with
 is swapped with the previous pane (before it numerically);
 .Fl D
 swaps with the next pane (after it numerically).
+.Fl d
+instructs
+.Nm
+not to change the active pane.
 .It Xo Ic swap-window
 .Op Fl d
 .Op Fl s Ar src-window
