--- a/tmux.1
+++ b/tmux.1
@@ -307,6 +307,13 @@ commands)
 otherwise the current window in
 .Em session
 is chosen.
+The special character
+.Ql \&!
+uses the last (previously current) window, or
+.Ql +
+and
+.Ql -
+are the next window or the previous window by number.
 When the argument does not contain a colon,
 .Nm
 first attempts to parse it as window; if that fails, an attempt is made to
