--- a/TODO
+++ b/TODO
@@ -111,3 +111,4 @@
         should pick up default-path/termios/etc from client if possible,
 	else leave empty/default
 - why does new-session/attach stop command sequence parsing? document it?
+- search should update selection and searching
