Top/bottom of history mode keys, diff from Micah Cowan, tweaked by me.

--- a/tmux.1
+++ b/tmux.1
@@ -538,6 +538,7 @@ The following keys are supported as appropriate for the mode:
 .Bl -column "FunctionXXXXXXXXXXXX" "viXXXXXXXXXX" "emacs" -offset indent
 .It Sy "Function" Ta Sy "vi" Ta Sy "emacs"
 .It Li "Back to indentation" Ta "^" Ta "M-m"
+.It Li "Bottom of history" Ta "G" Ta "M-<"
 .It Li "Clear selection" Ta "Escape" Ta "C-g"
 .It Li "Copy selection" Ta "Enter" Ta "M-w"
 .It Li "Cursor down" Ta "j" Ta "Down"
@@ -550,7 +551,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Delete entire line" Ta "d" Ta "C-u"
 .It Li "Delete to end of line" Ta "D" Ta "C-k"
 .It Li "End of line" Ta "$" Ta "C-e"
-.It Li "Goto line" Ta ":" Ta "g"
+.It Li "Go to line" Ta ":" Ta "g"
 .It Li "Half page down" Ta "C-d" Ta "M-Down"
 .It Li "Half page up" Ta "C-u" Ta "M-Up"
 .It Li "Next page" Ta "C-f" Ta "Page down"
@@ -566,6 +567,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Search forward" Ta "/" Ta "C-s"
 .It Li "Start of line" Ta "0" Ta "C-a"
 .It Li "Start selection" Ta "Space" Ta "C-Space"
+.It Li "Top of history" Ta "g" Ta "M->"
 .It Li "Transpose chars" Ta "" Ta "C-t"
 .El
 .Pp
