Typo, from Micah Cowan.

--- a/tmux.1
+++ b/tmux.1
@@ -581,7 +581,7 @@ for keys used when line editing at the command prompt;
 and
 .Em emacs-choice
 for keys used when choosing from lists (such as produced by the
-.Ic window-choose
+.Ic choose-window
 command) or in output mode; and
 .Em vi-copy
 and
