--- a/tmux.1
+++ b/tmux.1
@@ -364,7 +364,7 @@ new-window ; split-window -d
 The following commands are available:
 .Bl -tag -width Ds
 .It Xo Ic attach-session
-.Op Fl d
+.Op Fl dr
 .Op Fl t Ar target-session
 .Xc
 .D1 (alias: Ic attach )
@@ -376,6 +376,10 @@ If used from inside, switch the current client.
 If
 .Fl d
 is specified, any other clients attached to the session are detached.
+.Fl r
+signifies the client is read-only (only keys bound to the
+.Ic detach-client
+command have any effect)
 .Pp
 If no server is started,
 .Ic attach-session
