next-layout is bound to Space not C-Space.

--- a/tmux.1
+++ b/tmux.1
@@ -667,7 +667,7 @@ These may be selected with the
 command or cycled with
 .Ic next-layout
 (bound to
-.Ql C-space
+.Ql Space
 by default); once a layout is chosen, panes within it may be moved and resized
 as normal.
 .Pp
