Clarify default status-right, from Seth Wright.

--- a/tmux.1
+++ b/tmux.1
@@ -1663,7 +1663,8 @@ The default is 10.
 Display
 .Ar string
 to the right of the status bar.
-By default, the date and time will be shown.
+By default, the current window title in double quotes, the date and the time
+are shown.
 As with
 .Ic status-left ,
 .Ar string
