Add "N" key to search the opposite way from the last search (reverse of "n"), from Micah Cowan.

--- a/tmux.1
+++ b/tmux.1
@@ -572,6 +572,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Scroll down" Ta "C-Down or C-e" Ta "C-Down"
 .It Li "Scroll up" Ta "C-Up or C-y" Ta "C-Up"
 .It Li "Search again" Ta "n" Ta "n"
+.It Li "Search again in reverse" Ta "N" Ta "N"
 .It Li "Search backward" Ta "?" Ta "C-r"
 .It Li "Search forward" Ta "/" Ta "C-s"
 .It Li "Start of line" Ta "0" Ta "C-a"
