--- a/TODO
+++ b/TODO
@@ -127,3 +127,5 @@
 - multiline status line
 - flag for absolute pane size to resize-pane
 - sanity check input to socket
+- allow load-buffer to read until EOF for fifos and whatnot
+
