--- a/TODO
+++ b/TODO
@@ -110,13 +110,9 @@
 - sort out inheriting config from shell on new sessions/windows:
         should pick up default-path/termios/etc from client if possible,
 	else leave empty/default
-- why does new-session/attach stop command sequence parsing? document it?
-- search should update selection and searching
 - define custom layouts
 - link panes into multiple windows
 - -h option to capture-pane to capture the history as well
-- tmux should not die on recoverable errors in the config file, instead start
-  up with the window in output mode with a list of warnings (like emacs)
 - bells should be passed between sessions with visual-bell etc
 - use screen-256color when started on 256 colour terminal??
 - if-shell/run-shell should block further command execution in the same command
@@ -130,3 +126,4 @@
 - stdin fd should be passed up to parent so load-buffer and others could use it
   for nonattaching clients
 - environment should be set up for jobs
+- select-buffer command
