--- a/TODO
+++ b/TODO
@@ -129,7 +129,7 @@
 	- wrap for windows like panes
 	- +2 -2 etc to move by two
 
-For 1.3:
+For 1.3 (not in order):
 
 3 why are alerts per-winlink? try per window?
 4 audit of escape sequence support vs xterm
@@ -142,5 +142,8 @@ For 1.3:
 9 something for -t "last window in session" so a session can be used as a stack
 10 synchronous commands - client sends cmd and blocks, neww/splitw saves client ptr
    then when program inside died, sends MSG_SOMETHING with wait status to client
+11 documentation improvements - rlpowell's tutorial
+                              - build instructions
+12 better configure? with-libevent
 ...
 
